syntax = "proto3";

option csharp_namespace = "CurrencyConverterServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc ConvertNumber (ConvertRequest) returns (ConvertReply);
}

// The request message containing the user's name.
message ConvertRequest {
  string numberString = 1;
}

// The response message containing the greetings.
message ConvertReply {
  string message = 1;
}
